EPMRPP-38389: Wrap long columns in grid Fix word wrapping in markdown viewer

--- a/app/src/components/main/markdown/markdownViewer/markdownViewer.scss
+++ b/app/src/components/main/markdown/markdownViewer/markdownViewer.scss
@@ -29,6 +29,10 @@
   word-wrap: break-word;
   word-break: break-all;
 
+  @supports (word-break: break-word) {
+    word-break: break-word;
+  }
+
   .CodeMirror {
     .CodeMirror-lines {
       padding: 0;
